k8s/platform/networking/ingress/prod/client.ingress.prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
    nginx.ingress.kubernetes.io/use-forwarded-headers: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/certificate-name: app-prod-tls
    # point to the headers CM in the *new* namespace/name
    # nginx.ingress.kubernetes.io/proxy-set-headers: 'networking/ingress-nginx-argo-custom-headers'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  # 👇 cutover happens by changing the class
  ingressClassName: nginx-argo
  rules:
    - host: app.eliasdebock.com
      http:
        paths:
          # 1️⃣ Static admin bundles
          - path: /admin/.*\.[a-z0-9]+$
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin-client-prod
                port:
                  number: 80

          # 2️⃣ Everything else under /admin
          - path: /admin(/.*)?$
            pathType: ImplementationSpecific
            backend:
              service:
                name: platform-client-prod
                port:
                  number: 80

          # 4️⃣ Catch-all to platform client
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platform-client-prod
                port:
                  number: 80
  tls:
    - hosts: [app.eliasdebock.com]
      secretName: app-prod-tls
