k8s/platform/networking/ingress/prod/meilisearch.ingress.prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meilisearch-prod-ingress
  namespace: search
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-production
    # (optional) basic auth to protect the UI
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: meilisearch-basic-auth
    # nginx.ingress.kubernetes.io/auth-realm: "Restricted"
spec:
  ingressClassName: nginx-argo
  rules:
    - host: meilisearch.eliasdebock.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meilisearch-prod
                port:
                  number: 7700 # change if your Service exposes a different port/name
  tls:
    - hosts: [meilisearch.eliasdebock.com]
      secretName: meilisearch-prod-tls
